Receive temperature from external instance

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,8 @@
   }
   .target-temperature {
     text-align: center;
+    text-transform: uppercase;
+    font-size:14px;
   }
   .main {
     display: flex;
@@ -273,7 +275,7 @@
 
   function updateTargetTemp() {
     setLoading()
-    fetch('/temp.json', {
+    fetch('/target.json', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
